Reserva de publicaciones

--- a/src/global.scss
+++ b/src/global.scss
@@ -31,3 +31,10 @@
 .top-20{
     margin-top: 20px;
 }
+.right-10{
+    margin-right: 10px;
+}
+/* ion-toolbar {
+    --background: transparent;
+    --ion-color-base: transparent !important;
+} */
