--- a/src/app/pages/detalle-publicacion/detalle-publicacion.page.html
+++ b/src/app/pages/detalle-publicacion/detalle-publicacion.page.html
@@ -4,7 +4,7 @@
         <ion-back-button text="" defaultHref="main/tabs/tab1"></ion-back-button>
       </ion-buttons>
     </ion-toolbar>
-  </ion-header> 
+</ion-header> 
 <ion-content [fullscreen]="true">
     <ion-card>
         <ion-slides mode="ios" pager="ios" scrollbar="ios">
@@ -19,7 +19,7 @@
             <ion-grid>
                 <ion-row>
                     <ion-col>
-                        <a href="/perfil-distribuidor">{{publicacion?.empresa.nombre}}</a>
+                        <a (click)="verPerfilEmpresa(publicacion?.empresa._id)" >{{publicacion?.empresa.nombre}}</a>
 
                     </ion-col>
                 </ion-row>
@@ -45,6 +45,9 @@
             <br>
             {{publicacion?.descripcion}}
         </ion-card-content>
+        <ion-card-content>Cantidad disponible:
+            {{publicacion?.stock}}
+        </ion-card-content>
         <div *ngIf="publicacion?.despachoDomicilio">
             <ion-card-content>Despacho a domicilio:
                 <br>
@@ -53,7 +56,7 @@
             <ion-card-content>
                 <ion-item>
                     <ion-label>¿Desea despacho a domicilio?</ion-label>
-                    <ion-toggle slot="start" name="apple" color="secondary"></ion-toggle>
+                    <ion-toggle slot="start" name="despacho"  [(ngModel)]="despacho" color="secondary"></ion-toggle>
                 </ion-item>
             </ion-card-content>
         </div>
@@ -78,7 +81,7 @@
                 </ion-row>
                 <ion-row>
                     <ion-col>
-                        <ion-button expand="block" type="submit">
+                        <ion-button expand="block" type="submit" (click)="reservar()">
                             <ion-icon name="cart-sharp" slot="start"></ion-icon>Reservar
                         </ion-button>
                     </ion-col>
