--- a/src/global.scss
+++ b/src/global.scss
@@ -34,6 +34,9 @@
 .right-10{
     margin-right: 10px;
 }
+.left-10{
+    margin-left: 10px;
+}
 /* ion-toolbar {
     --background: transparent;
     --ion-color-base: transparent !important;
