--- a/src/app/pages/tab3/tab3.page.html
+++ b/src/app/pages/tab3/tab3.page.html
@@ -28,11 +28,7 @@
           <ion-icon name="heart" slot="start"></ion-icon>
           <ion-label>Distribuidores favoritos</ion-label>
         </ion-item>
-        <ion-item>
-          <ion-icon name="archive" slot="start"></ion-icon>
-          <ion-label>Publicaciones archivadas</ion-label>
-        </ion-item>
-        <ion-item routerLink="/productosReservados">
+        <ion-item routerLink="/productos-reservados">
           <ion-icon name="cart-sharp" slot="start"></ion-icon>
           <ion-label>Productos reservados</ion-label>
         </ion-item>
