--- a/src/app/pages/productos-vendidos/productos-vendidos.page.html
+++ b/src/app/pages/productos-vendidos/productos-vendidos.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button text="" defaultHref="/main/tabs/tab3"></ion-back-button>
     </ion-buttons>
-    <ion-title>Productos reservados</ion-title>
+    <ion-title>Productos vendidos</ion-title>
   </ion-toolbar>
 </ion-header>
 
