--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header translucent>
   <br>
   <ion-toolbar>
-    <ion-searchbar animated (ionChange)="buscar($event)"></ion-searchbar>
+    <ion-searchbar animated (ionChange)="buscar($event)" placeholder="Buscar"></ion-searchbar>
   </ion-toolbar>  
 </ion-header>
 
