--- a/src/app/pages/tab2/tab2.page.html
+++ b/src/app/pages/tab2/tab2.page.html
@@ -32,10 +32,11 @@
     </ion-item>
     <ion-item lines="none" class="top-20">
       <ion-label>Unidad de medida</ion-label>
-      <ion-select value="KG" formControlName="unidadMedida">
+      <ion-select value="Unidad" formControlName="unidadMedida">
+        <ion-select-option value="Unidad">Unidad</ion-select-option>
         <ion-select-option value="KG">Kilogramo</ion-select-option>
-        <ion-select-option value="Litro">Litro</ion-select-option>
         <ion-select-option value="Caja">Caja 12 Unidades</ion-select-option>
+        <ion-select-option value="Litro">Litro</ion-select-option>
       </ion-select>
     </ion-item>
     <ion-item lines="none" class="top-20">
