--- a/src/app/pages/detalle-reserva/detalle-reserva.page.html
+++ b/src/app/pages/detalle-reserva/detalle-reserva.page.html
@@ -14,7 +14,7 @@
       <ion-grid fixed>
         <ion-row>
           <ion-col size="4">
-            <ion-img src="assets/aceite.png" class="imagen"></ion-img>
+            <ion-img src="assets/{{imagenReserva}}" class="imagen"></ion-img>
           </ion-col>
           <ion-col size="8">
               <ion-label>{{titulo}}</ion-label><br>
