--- a/src/app/pages/tab3/tab3.page.html
+++ b/src/app/pages/tab3/tab3.page.html
@@ -90,7 +90,7 @@
             <ion-avatar slot="start">
               <img src="/assets/{{publicacion.imagenes[0]}} "/>
             </ion-avatar>
-            <ion-label text-wrap>
+            <ion-label text-wrap (click)="verDetallePublicacion(publicacion._id)">
               <ion-grid>
                 <ion-row>
                   <ion-col>
